--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2 id="info__title">TIC TAC TOE</h2>
       <div class="info__player">
         <img
-          src="assets/cross.png"
+          src="assets/1.jpg"
           alt="Player 1 icon"
           class="info__player__icon"
         />
@@ -23,7 +23,7 @@
       </div>
       <div class="info__player">
         <img
-          src="assets/circle.png"
+          src="assets/2.jpg"
           alt="Player 2 icon"
           class="info__player__icon"
         />
